# tidy-test

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.curl.md  README.md  Test-Tidy.md  version.txt
CMakeModules/: FindCURL.cmake  FindTidy.cmake  FindZLIB.cmake
build.x64/: .gitignore  build-me.bat  cmake-clean.txt  upd-tree.bat  updexe.bat
data/: 1.html
src/: htmltidy.c  issue-452.cxx  load-dll.cxx  poc-884.c  sample.c  sample2.c  test-get-options.c  test-locale.c  test-tidy.cxx  test226.cxx  test71.cxx  tidy-buf-test.c  tidy-by-buf.c  tidy-json.cxx  tidy-locale.c  tidy-opts.c  tidy-prev.c  tidy-tree.cxx  tidy-url.cxx  tidy.c  url2text.cxx
src/oratidy/: README.md  create_tidy_pkg.sql  liboratidy.c  test_oratidy.sql
src/tools/: space2tab.c  tab2spaces.c
src/utils/: httpio.c  httpio.h  sprtf.c  sprtf.h  utils.cxx  utils.hxx
test/: README.md  TESTS.md  alltest-mingw.bat  alltest-new.cmd  alltest2.cmd  clrconf.bat  debug.txt  html5check.py  onetest2.cmd  setconf.bat  setconf2.bat  setconfb.bat  setconfm.bat  t-415.bat  t-467.bat  t-483.bat  t1.bat  t1d.bat  t5.bat  td-old.bat  td.bat  testall.bat  testall.txt  tidy-def.conf  tidy-def2.conf  tidy-defb.conf  tidy-mute.conf  tr-01.bat  tr-02.bat  tr.bat  ts.bat  validate.bat
test/cases/access/: _manifest.txt
test/cases/special/: README.md
test/cases/testbase/: _manifest.txt
test/cases/testbase-expects/: case-1002509.txt  case-1014993.txt  case-1015959.txt  case-1055398.txt  case-1056023.txt  case-1062511.txt  case-1063256.txt  case-1266647.txt  case-1282835.txt  case-1316307b.txt  case-1326520.txt  case-1410061a.txt  case-1445570.txt  case-1603538a.txt  case-1632470.txt  case-1707836.txt  case-1773932.txt  case-2359929.txt  case-427664.txt  case-427672.txt  case-427836.txt  case-427838.txt  case-427840.txt  case-427846.txt  case-431721.txt  case-433856.txt  case-434100.txt  case-435903.txt  case-435922.txt  case-443576.txt  case-445394.txt  case-504206.txt  case-540571.txt  case-588061.txt  case-620531.txt  case-655338.txt  case-676156.txt  case-678268.txt  case-688746.txt  case-695408.txt  (+2 more)
test/input5/: 19970607tai_ke.html  add1.bat  add2.bat  blank5.htm  bugs.html  case_567.txt  cfg_110.txt  cfg_119-1.txt  cfg_119-2.txt  cfg_119-4.txt  cfg_133-1.txt  cfg_133-2.txt  cfg_133-3.txt  cfg_149.txt  cfg_1642186-4.txt  cfg_179-2.txt  cfg_179.txt  cfg_180-2.txt  cfg_191.txt  cfg_201-2.txt  cfg_201.txt  cfg_204-2.txt  cfg_205.txt  cfg_230.txt  cfg_232.txt  cfg_240.html  cfg_247.txt  cfg_263.txt  cfg_282-2.txt  cfg_314-2.txt  cfg_335-2.txt  cfg_335.txt  cfg_338-2.txt  cfg_338.txt  cfg_342-1.txt  cfg_342-3.txt  cfg_342-4.txt  cfg_373.txt  cfg_374.txt  cfg_389.txt  (+837 more)
test/testbase-new/: msg_1014993.txt  msg_1050673.txt  msg_1053626.txt  msg_1055398.txt  msg_1062345.txt  msg_1062511.txt  msg_1062661.txt  msg_1063256.txt  msg_1068087.txt  msg_1098012.txt  msg_1115094.txt  msg_1207443.txt  msg_1210752.txt  msg_1316307.txt  msg_1326520.txt  msg_1333579.txt  msg_1359292.txt  msg_1398397.txt  msg_1410061-1.txt  msg_1410061-2.txt  msg_1415137.txt  msg_1423252.txt  msg_1503897.txt  msg_1715153.txt  msg_2046048.txt  msg_2709860.txt  msg_426885.txt  msg_427675.txt  msg_427676.txt  msg_427811.txt  msg_427816.txt  msg_427818.txt  msg_427823.txt  msg_427841.txt  msg_431721.txt  msg_433012.txt  msg_433021.txt  msg_433666.txt  msg_433856.txt  msg_441508.txt  (+7 more)
test/tools-cmd/: _environment.bat  alltest.bat  onetest.bat
